unpackaged/main/default/objects/PricebookEntry/fields/Pricebook_Category__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Category__c</fullName>
    <label>Pricebook Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carrier Access</fullName>
            </value>
            <value>
                <fullName>Gateways &amp; Routers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>