unpackaged/main/default/objects/PricebookEntry/listViews/Cash.listView-meta.xml
<ListView>
    <fullName>Cash</fullName>
    <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product2.Product_Notes__c</columns>
    <columns>PRODUCT.DEFAULT_PRICE</columns>
    <columns>PRODUCT.ACTIVE</columns>
    <columns>Product2.GASA__c</columns>
    <filterScope>Queue</filterScope>
    <label>Cash</label>
    <queue>Cash</queue>
</ListView>